re PR middle-end/44763 (SEGV in allocno_priority_compare_func on Solaris 8)

PR middle-end/44763
	* ira-color.c (SORTGT): New macro, helper for qsort callbacks.
	(allocno_priority_compare_func): Use it instead of a straight
	difference computation over priorities.

From-SVN: r164562